# workgrid-memory

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN(1).md  IMPLEMENTATION(1).md  IMPLEMENTATION.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  dependabot.yml  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml  security_hardening.yml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/components/: Sidebar.tsx
apps/desktop/src/pages/: ContextPacksPage.tsx  IndexJobsPage.tsx  LogsPage.tsx  McpServerPage.tsx  ProfilesPage.tsx  SearchPage.tsx  SettingsPage.tsx  WorkspacesPage.tsx
crates/engine/: Cargo.toml
crates/engine/src/: indexer.rs  lib.rs  retrieval.rs  scanner.rs
crates/engine/src/indexer/: embedding_queue.rs  fts.rs  metadata.rs  profile.rs
crates/engine/src/retrieval/: context_pack.rs  hybrid_search.rs  scoring.rs
crates/engine/src/scanner/: chunker.rs  edge_builder.rs  file_scanner.rs  hasher.rs  ignore.rs  secrets.rs  symbol_extractor.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  server.rs  tools.rs  transport.rs
crates/shared/: Cargo.toml
crates/shared/src/: constants.rs  errors.rs  lib.rs  types.rs
docs/decisions/: ADR-001-tauri-react-desktop.md  ADR-002-sqlite-metadata-fts.md  ADR-003-lancedb-vector-storage.md  ADR-004-ollama-embeddings.md  ADR-005-mcp-transport.md  ADR-006-rust-first-engine.md  ADR-007-monorepo-structure.md  ADR-008-profile-memory-separation.md
scripts/: dev.sh  package.sh  test.sh
