[workspace]
resolver = "2"
members = [
  "crates/engine",
  "crates/mcp-server",
  "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/eru123/workgrid-memory"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Tauri — only used by the desktop app
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
