[package]
name = "workgrid-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
workgrid-shared = { path = "../shared", features = ["rusqlite"] }
