[package]
name = "workgrid-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
workgrid-engine = { path = "../engine" }
workgrid-shared = { path = "../shared" }
