[package]
name = "workgrid-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
workgrid-engine = { path = "../../../crates/engine" }
workgrid-shared = { path = "../../../crates/shared" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
